--- a/provider_agent/pyproject.toml
+++ b/provider_agent/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "google-adk[a2a]==1.19.0",
     "google-auth==2.42.0",
     "google-generativeai>=0.8.5",
+    "langchain-google-genai>=0.2.0",
     "langchain-mcp-adapters==0.1.11",
     "langchain[openai]==1.0.2",
     "langgraph==1.0.2",
